# fast_code_search

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN-REGEX-PATH-FILTER.md  DEVELOPMENT.md  PRIOR_ART.md  README.md  REVIEW.md  SEMANTIC_ML_MODEL_IMPLEMENTATION.md  SEMANTIC_ML_MODEL_PLAN.md  SEMANTIC_SEARCH_ANALYSIS.md  SEMANTIC_SEARCH_README.md  WIP.md  build.rs  build_errors.txt  changelog.json  clippy_out.txt  config.toml  dhat-heap.json  fast_code_search.toml  fcs_last_processed.txt  package-lock.json  package.json  release_notes.md  script.js  semantic_config.toml  skills-lock.json  tailwind.config.js  tailwindcss-browser-4.2.2.tgz  test_config.toml  tmp-plan.md  version.json
.github/: copilot-instructions.md
.github/workflows/: benchmark.yml  ci.yml  pages.yml  publish-extension.yml  release.yml  tag.yml
benches/: persistence_benchmark.rs  search_benchmark.rs
dev/bench/: data.js
docs/: DEPLOYMENT.md  DEVELOPMENT.md  GO_MIGRATION.md  INSTRUCTION_FILES_BLUEPRINT.md
docs/design/: DESIGN-REGEX-PATH-FILTER.md  PRIOR_ART.md
docs/semantic/: SEMANTIC_ML_MODEL_IMPLEMENTATION.md  SEMANTIC_ML_MODEL_UPDATES.md  SEMANTIC_SEARCH_ANALYSIS.md  SEMANTIC_SEARCH_FEATURE_PLAN_COMPLETE.md  SEMANTIC_SEARCH_IMPLEMENTATION_PLAN.md  SEMANTIC_SEARCH_README.md
docs/site/: index.html  script.js  style.css
examples/: benchmark_client.rs  client.rs  profile_search.rs  semantic_grpc_client.rs  test_index_loading.rs
go/: Makefile  go.mod  go.sum
go/cmd/server/: main.go
go/cmd/validator/: main.go
go/internal/config/: config.go
go/internal/dependencies/: graph.go
go/internal/diagnostics/: diagnostics.go
go/internal/index/: filestore.go  persistence.go  trigram.go
go/internal/search/: background.go  discovery.go  engine.go  filter.go  regex.go  watcher.go
go/internal/server/: service.go
go/internal/symbols/: extractor.go
go/internal/telemetry/: telemetry.go
go/internal/utils/: rlimit_unix.go  rlimit_windows.go  utils.go
go/internal/web/: api.go
go/proto/search/: search.pb.go  search_grpc.pb.go
go/proto/semantic_search/: semantic_search.pb.go  semantic_search_grpc.pb.go
go/tests/: integration_test.go
proto/: search.proto  semantic_search.proto
scripts/: run_combined_servers.ps1  run_semantic_server.bat  run_semantic_server.ps1  setup_test_corpus.bat  setup_test_corpus.sh
src/: config.rs  lib.rs  main.rs  telemetry.rs  utils.rs
src/dependencies/: mod.rs
src/diagnostics/: mod.rs
src/index/: file_store.rs  lazy_file_store.rs  mod.rs  persistence.rs  trigram.rs
src/search/: background_indexer.rs  engine.rs  file_discovery.rs  mod.rs  path_filter.rs  regex_search.rs  watcher.rs
src/semantic/: cache.rs  chunking.rs  config.rs  embeddings.rs  engine.rs  mod.rs  model_download.rs  vector_index.rs
src/semantic_server/: mod.rs  service.rs
src/semantic_web/: api.rs  mod.rs
src/server/: mod.rs  service.rs
src/symbols/: extractor.rs  mod.rs
src/web/: api.rs  mod.rs
static/: app.js  common.css  common.js  diagnostics-semantic.html  diagnostics.html  docs.html  fonts.css  index.html  keyword.css  keyword.js  material-symbols.css  semantic.css  semantic.html  semantic.js  semantic_script.js  semantic_style.css  style.css  tailwind.css
tests/: integration_tests.rs
vscode-extension/: .eslintrc.json  .vscodeignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts  vscode.proposed.d.ts
vscode-extension/src/api/: keywordClient.ts  semanticClient.ts  types.ts
vscode-extension/src/providers/: semanticSearchProvider.ts  textSearchProvider.ts
vscode-extension/src/server/: serverManager.ts
vscode-extension/src/utils/: errors.ts
