[package]
name = "fast_code_search"
version = "0.1.0"
edition = "2021"
authors = ["James Burrow"]
description = "High-performance, in-memory code search service with trigram indexing and symbol awareness"
license = "MIT"
repository = "https://github.com/jburrow/fast_code_search"
homepage = "https://github.com/jburrow/fast_code_search"
documentation = "https://docs.rs/fast_code_search"
readme = "README.md"
keywords = ["search", "code-search", "trigram", "grpc", "indexing"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["test_corpus/**", "target/**", ".github/**", "scripts/**"]

[lib]
name = "fast_code_search"
path = "src/lib.rs"

[dependencies]
memmap2 = "0.9"
roaring = "0.10"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
rayon = "1.8"
anyhow = "1.0"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
dirs = "5"
glob = "0.3"
globset = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
rust-embed = "8"
mime_guess = "2"
md5 = "0.7"

[dev-dependencies]
tempfile = "3.24"

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "fast_code_search_server"
path = "src/main.rs"
