[package]
name = "fast_code_search"
version = "0.1.0"
edition = "2021"
authors = ["James Burrow"]
description = "High-performance, in-memory code search service with trigram indexing and symbol awareness"
license = "MIT"
repository = "https://github.com/jburrow/fast_code_search"
homepage = "https://github.com/jburrow/fast_code_search"
documentation = "https://docs.rs/fast_code_search"
readme = "README.md"
keywords = ["search", "code-search", "trigram", "grpc", "indexing"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["test_corpus/**", "target/**", ".github/**", "scripts/**"]

[lib]
name = "fast_code_search"
path = "src/lib.rs"

[dependencies]
memmap2 = "0.9"
roaring = "0.11"
tree-sitter = "0.24"
tree-sitter-language = "0.1"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
rayon = "1.10"
anyhow = "1.0"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
dirs = "6"
glob = "0.3"
globset = "0.4"
regex = "1.11"
regex-syntax = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
rust-embed = "8"
mime_guess = "2"
md5 = "0.7"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
tokio-stream = { version = "0.1", features = ["net"] }

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "fast_code_search_server"
path = "src/main.rs"
